# ytsync-pi

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: architecture.md  build_phases.md  config_schema.md  deploy.md  index.md  runtime_contract.md
examples/: config.example.toml
src/: config.rs  db.rs  lock.rs  main.rs  musicbrainz.rs  ntfy.rs  preflight.rs  shutdown.rs  sync.rs  ytdlp.rs  ytdlp_updater.rs
systemd/: install.sh  ytsync-pi-canary.service  ytsync-pi-canary.timer  ytsync-pi.service  ytsync-pi.timer
